<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource">

    <item
        android:id="@+id/action_selectorMesa_pedidos"
        android:icon="@drawable/ic_pedidos_download_24dp"
        android:title="@string/actionbar_titulo_pedidos_myorder"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_selectorMesa_x"
        android:icon="@drawable/ic_ver_ventas"
        android:showAsAction="always"
        android:title="@string/consultar_ventas"
        android:visible="false"/>
    <item
        android:id="@+id/action_selectorMesa_z"
        android:icon="@drawable/ic_hacer_z"
        android:showAsAction="never"
        android:title="@string/cerrar_turno"
        android:visible="false"/>
</menu>